--- a/www/components/status/status.html
+++ b/www/components/status/status.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
 
   <ion-nav-buttons side="right">
-    <button class="button button-icon icon ion-camera" ui-sref="newthreadgetready"></button>
+    <button class="button button-icon icon {{safeModeIcon}}" ng-click="safeMode()"></button>
   </ion-nav-buttons>
 
   <ion-content class="has-header" padding="true">
