--- a/www/components/status/status.html
+++ b/www/components/status/status.html
@@ -8,7 +8,7 @@
   </ion-nav-buttons>
 
   <ion-nav-buttons side="right">
-    <button ng-hide="hasFriends" class="button button-icon icon ion-ios7-personadd-outline"></button>
+    <button ng-hide="hasFriends" class="button button-icon icon ion-ios7-personadd-outline" ui-sref="newthreadselectfriend"></button>
   </ion-nav-buttons>
 
   <ion-content class="has-header" padding="true">
