--- a/platforms/ios/www/components/nt_selectfriend/selectfriend.html
+++ b/platforms/ios/www/components/nt_selectfriend/selectfriend.html
@@ -1,14 +1,11 @@
 <ion-view title="Select a Friend">
   <ion-nav-bar>
     <ion-nav-buttons side="right">
-      <button class="button button-clear" ui-sref="newthreadgetready">Cancel</button>
+      <button class="button button-clear" ui-sref="status">Cancel</button>
     </ion-nav-buttons>
   </ion-nav-bar>
 
   <ion-content class="has-header" padding="true">
-
-    <!-- please center this :) -->
-    <img ng-src="{{capturedImageURI}}" style="width: 20%">
 
     <div class="list list-inset">
       <label class="item item-input">
@@ -18,7 +15,6 @@
     </div>
 
     <ion-list>
-      <!-- | orderBy: 'last' -->
       <ion-item ng-repeat="friend in friends |  filter: searchText" ng-click="selectFriend(friend)"> <!--   orderBy: 'first'  -->
         {{friend.first}} {{friend.last}}
       </ion-item>
