--- a/platforms/ios/www/components/status/status.html
+++ b/platforms/ios/www/components/status/status.html
@@ -1,35 +1,17 @@
-<ion-view title="Status" hide-back-button="true">
+<ion-view title="{{selectedFriend.first}}" hide-back-button="true">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
 
   <ion-nav-buttons side="right">
-    <button class="button button-icon icon ion-camera" ui-sref="newthreadgetready"></button>
+    <button ng-show="hasFriends" class="button button-icon icon {{safeModeIcon}}" ng-click="safeMode()"></button>
+  </ion-nav-buttons>
+
+  <ion-nav-buttons side="right">
+    <button ng-hide="hasFriends" class="button button-icon icon ion-ios7-personadd-outline" ui-sref="newthreadselectfriend"></button>
   </ion-nav-buttons>
 
   <ion-content class="has-header" padding="true">
-
-	  <!-- <div class="list">
-	    <a class="item item-avatar" ui-sref="thread">
-	      <img src="img/1.jpg">
-	    	<h2>Shawn</h2>
-	    </a>
-		</div> -->
-    <!-- Used to seed database with current user data. Uncomment and click button to add seed data. Delete when current user is live. -->
-    <!-- <div class="row">
-      <div  ng-click="seedDataBase()">Seed Data Base</div>
-    </div> -->
-
-    <ion-list>
-      <ion-item ng-repeat="thread in threads | orderBy: '-updated_at' " ng-click="selectThread(thread)" ng-class="{unread: !thread.creatorRead}">
-        {{thread.participants[1].first}} {{thread.participants[1].last}}
-        <div class="row">
-          <div ng-repeat="photo in thread.photos | limitTo: -3" class="col-25">
-            <img ng-src="{{photo.url}}" class="thread-photo">
-          </div>
-        </div>
-      </ion-item>
-    </ion-list>
 
   </ion-content>
 </ion-view>
