--- a/www/components/nt_selectfriend/selectfriend.html
+++ b/www/components/nt_selectfriend/selectfriend.html
@@ -1,7 +1,7 @@
 <ion-view title="Select a Friend">
   <ion-nav-bar>
     <ion-nav-buttons side="right">
-      <button class="button button-clear" ui-sref="status">Cancel</button>
+      <button class="button button-clear" ui-sref="menu.status">Cancel</button>
     </ion-nav-buttons>
   </ion-nav-bar>
 
