--- a/platforms/ios/www/components/signup_confirm/signupconfirm.html
+++ b/platforms/ios/www/components/signup_confirm/signupconfirm.html
@@ -8,7 +8,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Code: </span>
-          <input type="tel" ng-model="user.confirmationCode" autofocus="true" ng-minlength="4" ng-maxlength="4" > <!--  -->
+          <input type="tel" ng-model="user.confirmationCode" autofocus="true" ng-minlength="4" ng-maxlength="4" >
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Next</button>
