--- a/www/components/status/status.html
+++ b/www/components/status/status.html
@@ -13,6 +13,9 @@
 
   <ion-content class="has-header" padding="true">
 
+  <div id="pedometer-visualization">
+  </div>
+
   </ion-content>
 </ion-view>
 
