(feat) D3 chart added to status

--- a/platforms/ios/www/components/status/status.html
+++ b/platforms/ios/www/components/status/status.html
@@ -13,8 +13,7 @@
 
   <ion-content class="has-header" padding="true">
 
-  <div id="pedometer-visualization">
-  </div>
+  <d3-pedometer chart-data="demoData"></d3-pedometer>
 
   </ion-content>
 </ion-view>
