--- a/www/components/startup/startup.html
+++ b/www/components/startup/startup.html
@@ -4,7 +4,7 @@
 
     <div class="row" style="text-align: center;">
       <div class="col col-10"></div>
-      <div class="col col-80 col-center"><h1 style="color: white;">Trading Faces</h1></div>
+      <div class="col col-80 col-center"><h1 style="color: white;">DoingFine</h1></div>
       <div class="col col-10"></div>
     </div>
 
