(feat) Pulsing circle in status view will move in tempo with pedometer data

--- a/www/components/status/status.html
+++ b/www/components/status/status.html
@@ -13,7 +13,7 @@
 
   <ion-content class="has-header" padding="true">
 
-  <d3-pedometer chart-data="demoData"></d3-pedometer>
+  <d3-pedometer motion-data="motionData"></d3-pedometer>
 
   </ion-content>
 </ion-view>
