(feat) Add new functioning directive and general clean up

--- a/www/components/status_history/statushistory.html
+++ b/www/components/status_history/statushistory.html
@@ -9,7 +9,7 @@
 
   <ion-content class="has-header" padding="false">
 
-    Hello World
+    <d3-steps-chart-one-day steps-data="stepsData"></d3-steps-chart-one-day>
 
   </ion-content>
 </ion-view>
