(feat) Add basic line chart directive to status history

--- a/www/style/style.css
+++ b/www/style/style.css
@@ -22,3 +22,10 @@
 .status {
   color: gray;
 }
+
+/* status history page */
+path.line {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+}
