--- a/www/components/status_history/statushistory.html
+++ b/www/components/status_history/statushistory.html
@@ -1,15 +1,18 @@
 
 <div class="bar bar-header bar-stable">
-  <button class="button button-icon icon ion-arrow-left-c" ui-sref="menu.status">back</button>
-  <div class="h1 title">{{selectedFriend.first}}</div>
-  <button class="button button-icon icon ion-reply"></button>
+  <button class="button" ui-sref="menu.status">Done</button> <!-- button-icon icon ion-arrow-left-o -->
+  <div class="h1 title">{{selectedFriend.first}}'s History</div>
+  <!-- <button class="button button-icon icon ion-reply"></button> -->
 </div>
 
 <ion-view title="Friend">
 
-  <ion-content class="has-header" padding="false">
+  <ion-content class="has-header" style="text-align: center; background: #454545;" padding="false">
 
-    <d3-steps-chart-one-day steps-data="stepsData"></d3-steps-chart-one-day>
+    <div ng-repeat="day in days">
+      <d3-steps-chart-one-day steps-data="day.data"></d3-steps-chart-one-day>
+      <h4 class="status">{{day.day}}</h4>
+    </div>
 
   </ion-content>
 </ion-view>
