(feat) recolor all headers, buttons

--- a/www/components/confirm/confirm.html
+++ b/www/components/confirm/confirm.html
@@ -1,5 +1,5 @@
 <ion-view title="Challenge">
-  <ion-nav-bar>
+  <ion-nav-bar class="bar-calm">
     <ion-nav-buttons side="right">
       <button class="button button-clear" ui-sref="newthreadselectfriend">Cancel</button>
     </ion-nav-buttons>
