--- a/www/components/confirm_account/confirmaccount.html
+++ b/www/components/confirm_account/confirmaccount.html
@@ -1,14 +1,14 @@
 <ion-view title="Confirm Account">
-  <ion-nav-bar>
+  <ion-nav-bar class="bar-calm">
   </ion-nav-bar>
 
-  <ion-content class="has-header" padding="true"> 
+  <ion-content class="has-header" padding="true">
 
   	<p>Please check your SMS for a link to verify your account.</p>
   	<br>
-  	<button class="button button-block button-positive" ng-click="sendSMS()">Resend SMS</button>
+  	<button class="button button-block button-calm" ng-click="sendSMS()">Resend SMS</button>
   	<br>
-  	<button class="button button-block button-positive" ng-click="logIn()">My Account is Confirmed</button>
+  	<button class="button button-block button-calm" ng-click="logIn()">My Account is Confirmed</button>
 
   </ion-content>
 
