--- a/www/components/nt_getready/getready.html
+++ b/www/components/nt_getready/getready.html
@@ -10,7 +10,7 @@
       <div class="col col-10"></div>
     </div>
 
-    <button ng-click="shoot()" class="button button-block button-positive" type="submit">Launch Camera</button>
+    <button ng-click="shoot()" class="button button-block button-calm" type="submit">Launch Camera</button>
 
     <div class="row" style="height: 50%;">
       <div class="col"></div>
