--- a/www/components/signup_phone/signupphone.html
+++ b/www/components/signup_phone/signupphone.html
@@ -1,5 +1,5 @@
-<ion-view title="Sign Up">
-  <ion-nav-bar>
+<ion-view title="Sign Up" >
+  <ion-nav-bar class="bar-calm">
   </ion-nav-bar>
 
   <ion-content class="has-header" padding="true">
@@ -11,13 +11,13 @@
           <input type="tel" ng-model="user.phone" autofocus="true">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Next</button>
+          <button class="button button-block button-calm" type="submit">Next</button>
         </label>
       </div>
     </form>
 
     <!-- <label class="item">
-      <button class="button button-block button-positive" ng-click="test()">Test</button>
+      <button class="button button-block button-calm" ng-click="test()">Test</button>
     </label> -->
 
   </ion-content>
