--- a/www/components/status_history/statushistory.html
+++ b/www/components/status_history/statushistory.html
@@ -1,5 +1,5 @@
 
-<div class="bar bar-header bar-stable">
+<div class="bar bar-header bar-calm">
   <button class="button" ui-sref="menu.status">Done</button> <!-- button-icon icon ion-arrow-left-o -->
   <div class="h1 title">{{selectedFriend.first}}'s History</div>
   <!-- <button class="button button-icon icon ion-reply"></button> -->
