--- a/www/components/selectfriend/selectfriend.html
+++ b/www/components/selectfriend/selectfriend.html
@@ -1,5 +1,5 @@
 <ion-view title="Select a Friend">
-  <ion-nav-bar>
+  <ion-nav-bar class="bar-calm">
     <ion-nav-buttons side="right">
       <button class="button button-clear" ui-sref="newthreadgetready">Cancel</button>
     </ion-nav-buttons>
@@ -26,4 +26,3 @@
 
   </ion-content>
 </ion-view>
-
