--- a/www/components/signup_confirm/signupconfirm.html
+++ b/www/components/signup_confirm/signupconfirm.html
@@ -1,5 +1,5 @@
 <ion-view title="Sign Up">
-  <ion-nav-bar>
+  <ion-nav-bar class="bar-calm">
   </ion-nav-bar>
 
   <ion-content class="has-header" padding="true">
@@ -11,13 +11,13 @@
           <input type="tel" ng-model="user.confirmationCode" autofocus="true" ng-minlength="4" ng-maxlength="4" > <!--  -->
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Next</button>
+          <button class="button button-block button-calm" type="submit">Next</button>
         </label>
       </div>
     </form>
 
     <!-- <label class="item">
-      <button class="button button-block button-positive" ng-click="test()">Test</button>
+      <button class="button button-block button-calm" ng-click="test()">Test</button>
     </label> -->
 
   </ion-content>
