--- a/www/components/signup_name/signupname.html
+++ b/www/components/signup_name/signupname.html
@@ -1,8 +1,8 @@
 <ion-view title="Sign Up">
-  <ion-nav-bar>
+  <ion-nav-bar class="bar-calm">
   </ion-nav-bar>
 
-  <ion-content class="has-header" padding="true"> 
+  <ion-content class="has-header" padding="true">
 
     <form ng-submit="completeSignUp()">
       <div class="list">
@@ -15,7 +15,7 @@
           <input type="text" ng-model="user.last">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Finish</button>
+          <button class="button button-block button-calm" type="submit">Finish</button>
         </label>
       </div>
     </form>
