(feat) Changer selectedFriend to selectedUser

--- a/www/components/status_history/statushistory.html
+++ b/www/components/status_history/statushistory.html
@@ -1,7 +1,7 @@
 
 <div class="bar bar-header bar-stable">
   <button class="button button-icon icon ion-arrow-left-c" ui-sref="menu.status">back</button>
-  <div class="h1 title">{{selectedFriend.first}}</div>
+  <div class="h1 title">{{selectedUser.first}}</div>
   <button class="button button-icon icon ion-reply"></button>
 </div>
 
