--- a/www/components/menu/menu.html
+++ b/www/components/menu/menu.html
@@ -13,6 +13,10 @@
     </header>
     <ion-content class="has-header">
       <ion-list>
+        <ion-item nav-clear menu-close ng-click="getUserActivity(Device.user())" class="item item-icon-left">
+          <i class="icon ion-ios7-person-outline" ></i>
+          {{currentUserFirst}} {{currentUserLast}}
+        </ion-item>
         <ion-item ng-repeat="f in friends" nav-clear menu-close ng-click="getUserActivity(f)" class="item item-icon-left">
           <i class="icon ion-ios7-person-outline" ></i>
           {{f.first}} {{f.last}}
