--- a/www/components/nt_selectfriend/selectfriend.html
+++ b/www/components/nt_selectfriend/selectfriend.html
@@ -13,10 +13,14 @@
         <input type="text" placeholder="Search" ng-model="searchText">
       </label>
     </div>
-    <div>
-      <!-- <img desc='spinner' ng-src="{{spinnerImage}}"> -->
-      <img src="../../img/spinner.gif" ng-show=true style="display: block; margin: 0 auto">
-<!--       <div style="display: block; margin: 0 auto; background-image:url('spinner.gif');">
+    <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <i class="icon ion-refreshing placeholder-icon" style="font-size: 72px;" ng-show="spinner"></i>
+        </div>
+        <div class="col"></div>
+<!--       <div style="display: block; margin: 0 auto">
+        <i class="icon ion-refreshing placeholder-icon" style="font-size: 144px"></i>
       </div> -->
     </div>
     <ion-list>
