(feat) Hookup firebase connectDownstream

--- a/www/components/status/status.html
+++ b/www/components/status/status.html
@@ -14,7 +14,7 @@
   <ion-content class="has-header" padding="false" style="text-align: center; background: #454545;">
 
   <br>
-  <h3 class="status">Is walking</h3>
+  <h3 class="status">{{status}}</h3>
 
   <d3-pedometer motion-data="motionData"></d3-pedometer>
 
