(feat) update colors for status

--- a/www/components/status/status.html
+++ b/www/components/status/status.html
@@ -11,7 +11,7 @@
     <button ng-hide="hasFriends" class="button button-icon icon ion-ios7-personadd-outline" ui-sref="newthreadselectfriend"></button>
   </ion-nav-buttons>
 
-  <ion-content class="has-header" padding="false" style="text-align: center; background: #454545;">
+  <ion-content class="has-header" padding="false" style="text-align: center; background: white;">
 
   <br>
   <h3 class="status">{{status}}</h3>
