--- a/www/components/status_history/statushistory.html
+++ b/www/components/status_history/statushistory.html
@@ -6,7 +6,7 @@
 
 <ion-view title="Friend">
 
-  <ion-content class="has-header" style="text-align: center; background: #454545;" padding="false">
+  <ion-content class="has-header" style="text-align: center; background: white;" padding="false">
 
     <div ng-repeat="day in days">
       <d3-steps-chart-one-day steps-data="day.data"></d3-steps-chart-one-day>
