(bugfix) Change last moved to just now

--- a/www/components/status/status.html
+++ b/www/components/status/status.html
@@ -18,7 +18,7 @@
 
   <d3-pedometer motion-data="motionData"></d3-pedometer>
 
-  <h4 class="status" ui-sref="statushistory">Last Moved 20 minutes ago</h4>
+  <h4 class="status" ui-sref="statushistory">Last Moved just now</h4>
 
   </ion-content>
 </ion-view>
